--- a/README.Rmd
+++ b/README.Rmd
@@ -8,8 +8,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Introducción
-## subtitulo
-En este documento trabajaremos para explorar la identidad de plantas que se encuentran extintas en silvestria o totalmente extintas según la IUCN
+
+En este documento trabajaremos para explorar la identidad de plantas que se encuentran extintas en silvestria o totalmente extintas según la [*IUCN*](https://www.iucnredlist.org/)
 
 
 
